--- a/Labs/Lab1/Module4/Section3/M4S3/M4S3/M4S3.csproj
+++ b/Labs/Lab1/Module4/Section3/M4S3/M4S3/M4S3.csproj
@@ -44,10 +44,13 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Console.cs" />
+    <Compile Include="Member.cs" />
     <Compile Include="PayRoll.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Principal.cs" />
+    <Compile Include="Registrar.cs" />
+    <Compile Include="Student.cs" />
     <Compile Include="Teacher.cs" />
   </ItemGroup>
   <ItemGroup>
