--- a/Labs/Lab2/Module1/SalaryCalculatorTestProject/Calculator/Calculator.csproj
+++ b/Labs/Lab2/Module1/SalaryCalculatorTestProject/Calculator/Calculator.csproj
@@ -43,6 +43,7 @@
   <ItemGroup>
     <Compile Include="SalaryCalculator.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TaxData.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
